[gd_scene load_steps=18 format=2]

[ext_resource path="res://ui-assets/building-hud.svg" type="Texture" id=1]
[ext_resource path="res://Level0Grid.tscn" type="PackedScene" id=2]
[ext_resource path="res://FlaxMachine/Loom.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level0.gd" type="Script" id=4]
[ext_resource path="res://ui-assets/building-machinedrawer.svg" type="Texture" id=5]
[ext_resource path="res://ui-assets/1920x1080_white.svg" type="Texture" id=6]
[ext_resource path="res://Money.gd" type="Script" id=7]
[ext_resource path="res://cotton.gd" type="Script" id=8]
[ext_resource path="res://color.gd" type="Script" id=9]
[ext_resource path="res://Level0Drawer.tscn" type="PackedScene" id=10]
[ext_resource path="res://frabic.gd" type="Script" id=11]
[ext_resource path="res://color_fabric.gd" type="Script" id=12]
[ext_resource path="res://FontDosisLevelNumber.tres" type="DynamicFont" id=13]
[ext_resource path="res://FontDosisHUDResources.tres" type="DynamicFont" id=14]
[ext_resource path="res://ThemeButton.tres" type="Theme" id=15]
[ext_resource path="res://ui-assets/level_completed.svg" type="Texture" id=16]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 14 )

[node name="Level0" type="Node2D"]
script = ExtResource( 4 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 960, 540 )
z_index = -10
texture = ExtResource( 6 )

[node name="RunButton" type="Button" parent="."]
margin_left = 1646.0
margin_top = 768.0
margin_right = 1774.0
margin_bottom = 816.0
theme = ExtResource( 15 )
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building-machinedrawer" type="Sprite" parent="."]
z_index = -3
texture = ExtResource( 5 )
centered = false

[node name="Building-hud" type="Sprite" parent="."]
z_index = -2
texture = ExtResource( 1 )
centered = false

[node name="LevelNumber" type="Label" parent="."]
margin_left = 64.0
margin_top = 33.0
margin_right = 164.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 13 )
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MachineLoom" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 96, 552 )

[node name="Money" type="Label" parent="."]
margin_left = 64.0
margin_top = 168.0
margin_right = 155.0
margin_bottom = 214.0
custom_fonts/font = ExtResource( 14 )
text = "money"
align = 1
valign = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cotton" type="Label" parent="."]
margin_left = 227.0
margin_top = 90.0
margin_right = 285.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 14 )
text = "cotton"
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fabric" type="Label" parent="."]
margin_left = 227.0
margin_top = 39.0
margin_right = 276.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 14 )
text = "fabric"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="Label" parent="."]
margin_left = 227.0
margin_top = 137.0
margin_right = 271.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 14 )
text = "color"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color_fabric" type="Label" parent="."]
margin_left = 227.0
margin_top = 183.0
margin_right = 328.0
margin_bottom = 214.0
custom_fonts/font = ExtResource( 14 )
text = "color_fabric"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level0Drawer" parent="." instance=ExtResource( 10 )]
margin_right = 0.0
margin_bottom = 256.0

[node name="Level0Grid" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 496.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="GameClearPopup" type="Sprite" parent="."]
position = Vector2( -1218, 1125 )
texture = ExtResource( 16 )

[node name="Warning" type="Label" parent="."]
margin_left = 1671.0
margin_top = 819.0
margin_right = 1760.0
margin_bottom = 850.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Incorrect"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="RunButton" to="." method="_on_RunButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
